# FakeInput

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  Makefile  README.md  build.bat  build.sh  fakeinput.pc.in  premake4.lua
aux/cmake/: CMakeMacros.txt
config/cmake/: CMakeMacros.txt  cmake_uninstall.cmake.in  cmake_uninstall_dir.cmake.in  cmake_uninstall_path.cmake.in
config/doxygen/: qt.tag  xlib.tag
config/install/: install.mk  uninstall.mk
config/pkgconfig/: FakeInput.pc.in
config/premake4/: functions.lua  qt-support.lua
include/FakeInput/: display_unix.hpp  key.hpp  key_base.hpp  key_unix.hpp  key_win.hpp  keyboard.hpp  mouse.hpp  system.hpp
include/FakeInput/actions/: action.hpp  keyaction.hpp  mouseaction.hpp
lib/pkgconfig/: FakeInput.pc
src/: CMakeLists.txt  command.cpp  command.h  command.hpp  command_unix.cpp  command_win.cpp  config.h  config.h.cmake  config.hpp.cmake  display_unix.cpp  display_unix.h  display_unix.hpp  fakeinput.hpp  key.cpp  key.h  key.hpp  key_base.cpp  key_base.h  key_base.hpp  key_unix.cpp  key_unix.h  key_unix.hpp  key_win.cpp  key_win.h  key_win.hpp  keyboard.cpp  keyboard.h  keyboard.hpp  keyboard_unix.cpp  keyboard_win.cpp  mapper.h  mapper.hpp  mapper_unix.cpp  mapper_win.cpp  mouse.cpp  mouse.h  mouse.hpp  mouse_unix.cpp  mouse_win.cpp  premake4.lua  (+5 more)
src/actions/: action.hpp  actions.hpp  actionsequence.cpp  actionsequence.hpp  commandaction.cpp  commandaction.hpp  keyaction.cpp  keyaction.hpp  mouseaction.cpp  mouseaction.hpp  waitaction.cpp  waitaction.hpp
test/: CMakeLists.txt  premake4.lua
test/actionsTest/: CMakeLists.txt  actionForm.cpp  actionForm.hpp  actionsController.cpp  actionsController.hpp  actionsTest.cpp
test/commandTest/: CMakeLists.txt  commandTest.cpp  executer.cpp  executer.h  executer.hpp
test/keyEventTest/: CMakeLists.txt  keyEventGrabber.cpp  keyEventGrabber.h  keyEventGrabber.hpp  keyEventSender.cpp  keyEventSender.h  keyEventSender.hpp  keyEventTest.cpp
test/mouseEventTest/: CMakeLists.txt  clickButton.cpp  clickButton.h  clickButton.hpp  mouseController.cpp  mouseController.h  mouseController.hpp  mouseEventTest.cpp
tools/: expand_variables.py  licensecode  premake4-i686  premake4-x86_64
